Changes since last push:
 - added jumping and gravity

Known "features":
 - Holding down space means that it will attempt to jump whenever possible, 
rather than doing the "one press of space corresponds to one jump" that can feel more natural (in Terraria, the difference between equipping or not equipping a frog leg).
 - It is possible to step up a tile while jumping, to go up extra fast.
 - The strenth of gravity is independent of the world.

Known bugs:
 - Collision with the top of the map doesn't work right. This will probably be ignored after creating a clear solid unminable tile to go on the map borders.

Soon to come (though likely not very soon):
 - Tile sprites that don't look ugly
 - A (hopefully final) tile size of 16x16
 - Better values for movement fields
 - Trees!
 - Better map generation